# src/interfaces/http/openApi.json
@@ -2072,6 +2072,48 @@
         }
       }
     },
+    "/analytics/match": {
+      "get": {
+        "summary": "Display match analytics",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "operationId": "MatchReport",
+        "tags": [ "Analytics" ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "query",
+            "description": "Id of selected user",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Match analytics",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "statusCode": 200,
+                    "data": [
+                      {
+                        "id": 1,
+                        "modelLink": "Link of model"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/clips/keypoint/list": {
       "get": {
         "summary": "List all keypoints",
